--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -748,6 +748,8 @@
         Daha sonra istediğiniz zaman geri ödeme almak isterseniz, hello@simplemobiletools.com adresinden bizimle iletişime geçmeniz yeterlidir.</string>
     <string name="faq_9_title_commons">Aynı anda birden çok öğeyi nasıl seçebilirim?</string>
     <string name="faq_9_text_commons">Bunu yapmanın birçok yolu var. İlki, bir öğeye uzun süre basarak seçim modunu başlatmak, ardından diğerlerini seçmek için kısa tıklamaktır. İkinci yol, PC\'lerdeki öğeleri fareyle seçmeye benzer, yalnızca bir öğeye uzun basarak seçim modunu başlatın ve ardından parmağınızı aşağı doğru kaydırarak diğer öğelere sürükleyin. Birden fazla öğe seçmenin üçüncü yolu, bir öğeye uzun süre basmak, ardından diğerine uzun basmaktır. Tüm öğeleri seçmek istiyorsanız, yalnızca bir öğeye uzun basın, ardından sol üst köşedeki seçili öğe sayacına tıklayın. Bu, her şeyi seçecek veya seçimini kaldıracaktır.</string>
+    <string name="faq_10_title_commons">I have purchased the app, but I cannot download it on another device.</string>
+    <string name="faq_10_text_commons">Try clearing your Google Play app cache and restarting your device. It is some Google Play glitch, not really related to the app itself.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
     <string name="why_upgrade">﻿Pro sürümünü şimdi alın!</string>
