use rounded corners at the color customization screen

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -751,7 +751,7 @@
     <string name="faq_9_text_commons">Hi ha diverses maneres de fer-ho. El primer és iniciar el mode de selecció prement un element i, a continuació, fer clic breu sobre els altres per seleccionar-los. La segona forma és similar a la selecció d\’elements en ordinadors amb un ratolí,
          només cal que inicieu el mode de selecció prement un element i, tot seguit, arrossegueu-lo amb el dit cap a altres elements per seleccionar-lo. La tercera manera de seleccionar diversos elements consisteix en prémer llargament un element, després en prémer llargament un altre i es selecciona tot el que hi ha entre els dos. Si tu
          voleu seleccionar tots els elements; només cal que premeu llargament un element i, a continuació, feu clic al comptador d\’elements seleccionats a l\’extrem superior esquerre. Això seleccionarà o anul·larà la selecció de tot.</string>
-    <string name="faq_10_title_commons">He comprat l'aplicació, però no la puc baixar en cap altre dispositiu.</string>
+    <string name="faq_10_title_commons">He comprat l\'aplicació, però no la puc baixar en cap altre dispositiu.</string>
     <string name="faq_10_text_commons">Proveu d\'esborrar la memòria cau de l\'aplicació Google Play i reinicieu el dispositiu. Es tracta d\'un problema de Google Play, que no està realment relacionat amb l\'aplicació en si.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
