adding a new string for locking color customization

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -483,6 +483,7 @@
     <string name="settings">الإعدادات</string>
     <string name="purchase_simple_thank_you">شراء تطبيق (Simple Thank You)</string>
     <string name="customize_colors">تخصيص الألوان</string>
+    <string name="customize_colors_locked">تخصيص الألوان (Locked)</string>
     <string name="customize_widget_colors">تخصيص ألوان الويدجت</string>
     <string name="use_english_language">إستخدام اللغة الإنجليزية</string>
     <string name="show_hidden_items">إظهار العناصر المخفية</string>
