--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Parametrlər</string>
     <string name="purchase_simple_thank_you">Sadə Təşəkkür\'ü Alın</string>
     <string name="customize_colors">Rəngləri dəyiş</string>
+    <string name="customize_colors_locked">Rəngləri dəyiş (Locked)</string>
     <string name="customize_widget_colors">Widget rənglərini dəyiş</string>
     <string name="use_english_language">İngilis dilində işlət</string>
     <string name="show_hidden_items">Gizli faylları göstər</string>
