--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -609,6 +609,7 @@
     <string name="settings">Gosodiadau</string>
     <string name="purchase_simple_thank_you">Prynu Simple Thank You</string>
     <string name="customize_colors">Addasu lliwiau</string>
+    <string name="customize_colors_locked">Addasu lliwiau (Locked)</string>
     <string name="customize_widget_colors">Addasu lliwiau teclyn</string>
     <string name="use_english_language">Defnyddio Saesneg</string>
     <string name="show_hidden_items">Dangos eitemau cudd</string>
