--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Indstillinger</string>
     <string name="purchase_simple_thank_you">Køb Simple Thank You</string>
     <string name="customize_colors">Rediger farver</string>
+    <string name="customize_colors_locked">Rediger farver (Locked)</string>
     <string name="customize_widget_colors">Rediger widget-farver</string>
     <string name="use_english_language">Anvend engelsk sprog</string>
     <string name="show_hidden_items">Vis skjulte elementer</string>
