--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Ajustes</string>
     <string name="purchase_simple_thank_you">Comprar Simple Gracias</string>
     <string name="customize_colors">Cambiar colores</string>
+    <string name="customize_colors_locked">Cambiar colores (Locked)</string>
     <string name="customize_widget_colors">Personaliza los colores del widget</string>
     <string name="use_english_language">Usar el idioma Inglés</string>
     <string name="show_hidden_items">Mostrar elementos ocultos</string>
