--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Axustes</string>
     <string name="purchase_simple_thank_you">Comprar Simple Thank You</string>
     <string name="customize_colors">Cambiar cores</string>
+    <string name="customize_colors_locked">Cambiar cores (Locked)</string>
     <string name="customize_widget_colors">Personalizar cores do widget</string>
     <string name="use_english_language">Usar o idioma inglés</string>
     <string name="show_hidden_items">Amosar elementos ocultos</string>
