--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -516,6 +516,7 @@
     <string name="settings">Postavke</string>
     <string name="purchase_simple_thank_you">Kupite Jednostavno Hvala</string>
     <string name="customize_colors">Prilagodi boje</string>
+    <string name="customize_colors_locked">Prilagodi boje (Locked)</string>
     <string name="customize_widget_colors">Prilagodi boje widgeta</string>
     <string name="use_english_language">Koristi Engleski jezik</string>
     <string name="show_hidden_items">Prikaži skrivene stavke</string>
