--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Impostazioni</string>
     <string name="purchase_simple_thank_you">Acquista Semplice Ringraziamento</string>
     <string name="customize_colors">Personalizza i colori</string>
+    <string name="customize_colors_locked">Personalizza i colori (Locked)</string>
     <string name="customize_widget_colors">Personalizza i colori del widget</string>
     <string name="use_english_language">Usa la lingua inglese</string>
     <string name="show_hidden_items">Mostra gli elementi nascosti</string>
