--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">הגדרות</string>
     <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">התאם צבעים</string>
+    <string name="customize_colors_locked">התאם צבעים (Locked)</string>
     <string name="customize_widget_colors">התאם צבעי יישומון</string>
     <string name="use_english_language">השתמש בשפה האנגלית</string>
     <string name="show_hidden_items">הצג פריטים מוסתרים</string>
