--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -509,6 +509,7 @@
     <string name="settings">Nustatymai</string>
     <string name="purchase_simple_thank_you">Purchase Simple Thank You</string>
     <string name="customize_colors">Spalvų redagavimas</string>
+    <string name="customize_colors_locked">Spalvų redagavimas (Locked)</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Naudoti anglų kalbą</string>
     <string name="show_hidden_items">Rodyti paslėptus elementus</string>
