--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Innstillinger</string>
     <string name="purchase_simple_thank_you">Kjøp Simple Thank You</string>
     <string name="customize_colors">Tilpass farger</string>
+    <string name="customize_colors_locked">Tilpass farger (Locked)</string>
     <string name="customize_widget_colors">Tilpass modulfarger</string>
     <string name="use_english_language">Bruk engelsk språk</string>
     <string name="show_hidden_items">Vis skjulte elementer</string>
