--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -548,6 +548,7 @@
     <string name="settings">Nastavitve</string>
     <string name="purchase_simple_thank_you">Kupite aplikacijo Simple Thank You</string>
     <string name="customize_colors">Prilagodite barve</string>
+    <string name="customize_colors_locked">Prilagodite barve (Locked)</string>
     <string name="customize_widget_colors">Prilagodite barve pripomočka</string>
     <string name="use_english_language">Uporabljaj angleški jezik</string>
     <string name="show_hidden_items">Prikaži skrite elemente</string>
