--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -484,6 +484,7 @@
     <string name="settings">Подешавања</string>
     <string name="purchase_simple_thank_you">Пазарите Simple Thank You</string>
     <string name="customize_colors">Прилагодите боје</string>
+    <string name="customize_colors_locked">Прилагодите боје (Locked)</string>
     <string name="customize_widget_colors">Прилагодите боје виџета</string>
     <string name="use_english_language">Користи енглески језик</string>
     <string name="show_hidden_items">Прикажи скривене ставке</string>
