--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Inställningar</string>
     <string name="purchase_simple_thank_you">Köp Simple Thank You</string>
     <string name="customize_colors">Anpassa färger</string>
+    <string name="customize_colors_locked">Anpassa färger (Locked)</string>
     <string name="customize_widget_colors">Anpassa widgetarnas färger</string>
     <string name="use_english_language">Använd engelska</string>
     <string name="show_hidden_items">Visa dolda objekt</string>
