--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Ayarlar</string>
     <string name="purchase_simple_thank_you">Basit Teşekkürler\'i Satın Al</string>
     <string name="customize_colors">Renkleri özelleştir</string>
+    <string name="customize_colors_locked">Renkleri özelleştir (Locked)</string>
     <string name="customize_widget_colors">Widget renklerini özelleştir</string>
     <string name="use_english_language">İngilizce dilini kullan</string>
     <string name="show_hidden_items">Gizli öğeleri göster</string>
