--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Налаштування</string>
     <string name="purchase_simple_thank_you">Придбати Simple Thank You</string>
     <string name="customize_colors">Налаштувати кольори</string>
+    <string name="customize_colors_locked">Налаштувати кольори (Locked)</string>
     <string name="customize_widget_colors">Налаштувати кольори віджета</string>
     <string name="use_english_language">Використовувати англійську (Use English language)</string>
     <string name="show_hidden_items">Показати приховані елементи</string>
