--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Cài đặt</string>
     <string name="purchase_simple_thank_you">Cảm ơn vì đã mua hàng Simple</string>
     <string name="customize_colors">Tùy chỉnh màu sắc</string>
+    <string name="customize_colors_locked">Tùy chỉnh màu sắc (Locked)</string>
     <string name="customize_widget_colors">Tùy chỉnh màu widget</string>
     <string name="use_english_language">Sử dụng tiếng anh</string>
     <string name="show_hidden_items">Hiển thị các mục ẩn</string>
