--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -453,6 +453,7 @@
     <string name="settings">设置</string>
     <string name="purchase_simple_thank_you">购买 Simple Thank You</string>
     <string name="customize_colors">自定义颜色</string>
+    <string name="customize_colors_locked">自定义颜色 (Locked)</string>
     <string name="customize_widget_colors">自定义小部件颜色</string>
     <string name="use_english_language">强制使用英语语言</string>
     <string name="show_hidden_items">显示隐藏的项目</string>
