--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Einstellungen</string>
     <string name="purchase_simple_thank_you">\"Simple Thank You\" App kaufen</string>
     <string name="customize_colors">Farben anpassen</string>
+    <string name="customize_colors_locked">Farben anpassen (Locked)</string>
     <string name="customize_widget_colors">Widget Farben anpassen</string>
     <string name="use_english_language">App in Englisch verwenden</string>
     <string name="show_hidden_items">Versteckte Elemente anzeigen</string>
