--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Ρυθμίσεις</string>
     <string name="purchase_simple_thank_you">Αγοράστε το \"Απλά Σας ευχαριστώ\"</string>
     <string name="customize_colors">Προσαρμογή χρωμάτων</string>
+    <string name="customize_colors_locked">Προσαρμογή χρωμάτων (Locked)</string>
     <string name="customize_widget_colors">Προσαρμογή χρωμάτων widget</string>
     <string name="use_english_language">Χρήση γλώσσας English</string>
     <string name="show_hidden_items">Εμφάνιση κρυφών στοιχείων</string>
