--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Ezarpenak</string>
     <string name="purchase_simple_thank_you">Erosi Simple Thank You</string>
     <string name="customize_colors">Pertsonalizatu koloreak</string>
+    <string name="customize_colors_locked">Pertsonalizatu koloreak (Locked)</string>
     <string name="customize_widget_colors">Pertsonalizatu widgeten koloreak</string>
     <string name="use_english_language">Erabili ingeles hizkuntza</string>
     <string name="show_hidden_items">Erakutsi ezkutatutako elementuak</string>
