--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Asetukset</string>
     <string name="purchase_simple_thank_you">Osta Simple Thank You</string>
     <string name="customize_colors">Muokkaa sovelluksen värejä</string>
+    <string name="customize_colors_locked">Muokkaa sovelluksen värejä (Locked)</string>
     <string name="customize_widget_colors">Mukauta pienoissovelluksen värejä</string>
     <string name="use_english_language">Käytä englannin kieltä</string>
     <string name="show_hidden_items">Näytä piilotetut tiedostot</string>
