--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -484,6 +484,7 @@
     <string name="settings">Beállítások</string>
     <string name="purchase_simple_thank_you">Simple Thank You megvásárlása</string>
     <string name="customize_colors">Színek testreszabása</string>
+    <string name="customize_colors_locked">Színek testreszabása (Locked)</string>
     <string name="customize_widget_colors">Widget színek testreszabása</string>
     <string name="use_english_language">Angol nyelv használata</string>
     <string name="show_hidden_items">Mutassa a rejtett elemeket</string>
