--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -485,6 +485,7 @@
     <string name="settings">Configurações</string>
     <string name="purchase_simple_thank_you">Compre o Simple Thank You</string>
     <string name="customize_colors">Personalizar cores</string>
+    <string name="customize_colors_locked">Personalizar cores (Locked)</string>
     <string name="customize_widget_colors">Personalizar cores de widget</string>
     <string name="use_english_language">Usar o idioma inglês</string>
     <string name="show_hidden_items">Exibir itens ocultos</string>
