--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -518,6 +518,7 @@
     <string name="settings">Настройки</string>
     <string name="purchase_simple_thank_you">Купить Simple Thank You</string>
     <string name="customize_colors">Настройки интерфейса</string>
+    <string name="customize_colors_locked">Настройки интерфейса (Locked)</string>
     <string name="customize_widget_colors">Настроить цвета виджета</string>
     <string name="use_english_language">Использовать английский язык</string>
     <string name="show_hidden_items">Показывать скрытые папки</string>
