--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -485,7 +485,7 @@
     <string name="settings">Instellingen</string>
     <string name="purchase_simple_thank_you">Eenvoudig Bedankje kopen</string>
     <string name="customize_colors">Kleuren aanpassen</string>
-    <string name="customize_colors_locked">Kleuren aanpassen (Locked)</string>
+    <string name="customize_colors_locked">Kleuren aanpassen (Vergrendeld)</string>
     <string name="customize_widget_colors">Kleuren voor widget aanpassen</string>
     <string name="use_english_language">Use English language</string>
     <string name="show_hidden_items">Verborgen items tonen</string>
